잠금 패턴 기능
activity_lock_screen.xml
잠금 화면(2016-08-10 구현중)
CircleLayout.java
제스쳐 이벤트(2016-08-10 구현중)
LockScreenActivity.java
제스쳐 이벤트 CircleLayout 와 연동(2016-08-10 구현중)
=> 인터페이스 사용 해서 좌표값 얻어와야 할듯

--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -3,24 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diallock.diallock.diallock.Activity.Activity.LockScreenActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.diallock.diallock.diallock.Activity.Activity.LockScreenActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"></RelativeLayout>
+        android:layout_weight="1" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"></LinearLayout>
+        android:layout_weight="1"
+        android:gravity="bottom"
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button6"
-        android:layout_marginTop="-30dp" />
+        <include
+            layout="@layout/fragment_circle_dial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="-70dp">
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="left"
+                android:background="@drawable/user_add" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="right"
+                android:background="@drawable/password_find" />
+        </RelativeLayout>
+    </LinearLayout>
+
 </LinearLayout>
