클릭 이벤트
LockScreenActivity.java
제스쳐 이벤트 CircleLayout 와 연동(2016-08-11 완료)

CircleLayout.java
원 눌리는 좌표값 설정(2016-08-11 완료)
원 클릭 이미지 설정 (2016-08-11 완료)
원 클릭 시 랜덤 배열 설정(2016-08-11 구현중)

--- a/app/src/main/res/layout/fragment_circle_dial.xml
+++ b/app/src/main/res/layout/fragment_circle_dial.xml
@@ -5,6 +5,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <com.diallock.diallock.diallock.Activity.Layout.CircleLayout
+        android:id="@+id/circle_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
