비밀번호 찾기
LockScreenActivity.java
비밀번호 찾기 클릭 시 이메일 보내기(2016-08-17 완료)

activity_email_change.xml
이메일 변경 화면 구성(2016-08-17 완료)

EmailChangeActivity.java
기능 구현 (2016-08-17 완료)
뒤로가기 버튼 클릭시 종료 구현(2016-08-17 완료)

--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -30,14 +30,7 @@
             android:layout_marginTop="-70dp">
 
             <Button
-                android:id="@+id/button6"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="left"
-                android:background="@drawable/user_add" />
-
-            <Button
-                android:id="@+id/button7"
+                android:id="@+id/btn_find_pass"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentEnd="true"
