--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -6,10 +6,30 @@
     android:orientation="vertical"
     tools:context="com.diallock.diallock.diallock.Activity.Activity.LockScreenActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_lock_day"
+            android:text="2016년 8월 10일 수요일"
+            android:textSize="25dp"
+            android:textColor="#000000" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="오후 7시 50분"
+            android:id="@+id/txt_lock_time"
+            android:textSize="35dp"
+            android:layout_marginTop="20dp"
+            android:textColor="#000000" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
