--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -4,31 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.diallock.diallock.diallock.Activity.Activity.LockScreenActivity">
+    tools:context="com.diallock.diallock.diallock.Activity.Activity.LockScreenActivity"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/txt_lock_day"
-            android:text="2016년 8월 10일 수요일"
-            android:textSize="25dp"
-            android:textColor="#000000" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="오후 7시 50분"
+            android:text="2016년 8월 10일 수요일"
+            android:textColor="#000000"
+            android:textSize="25dp" />
+
+        <TextView
             android:id="@+id/txt_lock_time"
-            android:textSize="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="#000000" />
+            android:text="오후 7시 50분"
+            android:textColor="#000000"
+            android:textSize="35dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,14 +61,15 @@
                 android:background="@drawable/password_find" />
 
             <Button
+                android:id="@+id/btn_cancle"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="취소"
-                android:id="@+id/btn_cancle"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="취소" />
         </RelativeLayout>
     </LinearLayout>
+
 
 </LinearLayout>
