--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -16,18 +16,17 @@
 
         <TextView
             android:id="@+id/txt_lock_day"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2016년 8월 10일 수요일"
             android:textColor="#000000"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/txt_lock_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="오후 7시 50분"
             android:textColor="#000000"
             android:textSize="35dp" />
     </LinearLayout>
