--- a/app/src/main/res/layout/fragment_circle_dial.xml
+++ b/app/src/main/res/layout/fragment_circle_dial.xml
@@ -8,4 +8,16 @@
         android:id="@+id/circle_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_toast"
+        android:layout_gravity="center"
+        android:textColor="#FFFFFF"
+        android:autoText="false"
+        android:background="@drawable/txt_bg"
+        android:text="플레이스토어에 등록된 이메일로 패스워드가 발송됩니다."
+        android:padding="10dp"
+        android:visibility="invisible" />
 </FrameLayout>
