--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -51,13 +51,14 @@
 
             <Button
                 android:id="@+id/btn_find_pass"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="right"
-                android:background="@drawable/password_find" />
+                android:background="@drawable/password_find"
+                android:layout_marginRight="10dp" />
 
             <Button
                 android:id="@+id/btn_cancle"
