다이얼락 체크리스트
SettingActivity.java
권한 설정 체크 후 바로 잠금 설정시 비밀번호 설정 창 띄우기 (2016-09-08 완료)

CircleLayout.java
비밀번호 입력 오류시 -> 두 번 울리는 진동 및 화면표시 시간 타임 줄이기 (예, 1초이면 0.5초)=> 500 에서 200으로 변경 (2016-09-08 완료)
비밀번호 입력시마다 진동처리 (짧게 울림), 사용자가 돌리면 실제 비밀번호가 입력되었는지를 진동으로 사용자에게 전달이 되도록.. (2016-09-08 완료)

ScreenService.java
DialLock 문구 다이얼락 으로 변경 (2016-09-08 완료)

activity_lock_screen.xml
찾기 아이콘 -> 크기 80%로 축소, 하단으로 조금 더 이동. (2016-09-08 완료)

CircleLayoutPassword.java
비밀번호 설정 시 -> 번호 누를 때마다 1회, 짧은 진동 적용 (입력되었다는 표시, 느낌을 위해) (2016-09-08 완료)

ScreenReceiver.java
핸드폰 사용중일 때 전화가 오면 락 안걸리게 변경 (2016-09-08 완료)

--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -51,14 +51,15 @@
 
             <Button
                 android:id="@+id/btn_find_pass"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="right"
                 android:background="@drawable/password_find"
-                android:layout_marginRight="10dp" />
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp" />
 
         </RelativeLayout>
     </LinearLayout>
