--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -11,24 +11,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txt_lock_day"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txt_lock_time"
+                android:layout_width="match_parent"
+                android:layout_height="86dp"
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:gravity="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="25dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-        <TextView
-            android:id="@+id/txt_lock_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColor="#000000"
-            android:textSize="35dp" />
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:id="@+id/lock_screen_pre"
+                android:background="@drawable/previous" />
+
+            <TextView
+                android:id="@+id/txt_lock_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="40dp"
+                android:layout_height="50dp"
+                android:id="@+id/lock_screen_nex"
+                android:background="@drawable/next" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#e0e0e0"></LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lock_screen_listview" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#e0e0e0"
+            android:layout_marginTop="-1dp" />
+
     </LinearLayout>
 
     <LinearLayout
