--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -16,7 +16,31 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:id="@+id/lock_screen_menu"
+                android:background="@drawable/menu" />
+
+            <TextView
+                android:id="@+id/txt_lock_title"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:textColor="#000000"
+                android:textSize="20dp"
+                android:gravity="center"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:id="@+id/lock_screen_setting"
+                android:background="@drawable/settings" />
 
             <TextView
                 android:id="@+id/txt_lock_time"
@@ -24,20 +48,27 @@
                 android:layout_height="76dp"
                 android:textColor="#000000"
                 android:textSize="25dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:visibility="gone" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#e0e0e0"></LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:gravity="center"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
 
             <Button
-                android:layout_width="40dp"
-                android:layout_height="50dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:id="@+id/lock_screen_pre"
                 android:background="@drawable/previous" />
 
@@ -51,8 +82,8 @@
                 android:layout_weight="1" />
 
             <Button
-                android:layout_width="40dp"
-                android:layout_height="50dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:id="@+id/lock_screen_nex"
                 android:background="@drawable/next" />
 
@@ -85,11 +116,11 @@
         android:gravity="bottom"
         android:orientation="vertical">
 
-        <include
-            layout="@layout/fragment_circle_dial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.diallock.diallock.diallock.Activity.Fragment.CircleDial"
+            android:id="@+id/fragment" />
 
         <RelativeLayout
             android:layout_width="match_parent"
