--- a/app/src/main/res/layout/fragment_circle_dial.xml
+++ b/app/src/main/res/layout/fragment_circle_dial.xml
@@ -1,23 +1,32 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
+
     <com.diallock.diallock.diallock.Activity.Layout.CircleLayout
         android:id="@+id/circle_screen"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible" />
 
     <TextView
+        android:id="@+id/txt_toast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txt_toast"
         android:layout_gravity="center"
-        android:textColor="#FFFFFF"
         android:autoText="false"
         android:background="@drawable/txt_bg"
-        android:text="플레이스토어에 등록된 이메일로 패스워드가 발송됩니다."
         android:padding="10dp"
+        android:text="플레이스토어에 등록된 이메일로 패스워드가 발송됩니다."
+        android:textColor="#FFFFFF"
         android:visibility="invisible" />
+
+    <fragment
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:name="com.diallock.diallock.diallock.Activity.Fragment.WidgetTimeFragment"
+        android:id="@+id/widget_fragment"
+        android:layout_gravity="center" />
+
 </FrameLayout>
