--- a/app/src/main/res/layout/lock_screen_listview_item.xml
+++ b/app/src/main/res/layout/lock_screen_listview_item.xml
@@ -1,90 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="5dp"
+    android:orientation="horizontal"
     android:paddingBottom="5dp"
-    android:id="@+id/list_item">
+    android:paddingTop="5dp">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="50dp"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:orientation="vertical"
         android:paddingLeft="10dp">
 
         <TextView
+            android:id="@+id/txt_item_si"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/txt_item_si" />
+            android:text="New Text" />
 
         <TextView
+            android:id="@+id/txt_item_gu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/txt_item_gu" />
+            android:singleLine="true"
+            android:text="New Text" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="left|center"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txt_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/txt_item_title" />
+                android:singleLine="true"
+                android:text="New Text" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="New Text"
                 android:id="@+id/txt_item_day"
-                android:layout_weight="1"
-                android:gravity="center" />
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="New Text" />
 
             <TextView
+                android:id="@+id/txt_item_local"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/txt_item_local"
                 android:layout_weight="1"
-                android:gravity="center" />
+                android:gravity="left"
+                android:singleLine="true"
+                android:text="New Text" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="당일"
-            android:id="@+id/btn_item"
-            android:textColor="#FFFFFF"
             android:background="@drawable/btn_lock_screen_today"
+            android:text="당일"
+            android:textColor="#FFFFFF"
             android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
