프래그먼트 기능 구현
"CircleLayout.java
패스워드 찾기 버튼 롱클릭으로 변경(2016-09-28 완료)"

"fragment_circle_dial.xml
다이얼 내부에 좌우 슬라이드 기능 구현(2016-09-28 완료)"

--- a/app/src/main/res/layout/fragment_circle_dial.xml
+++ b/app/src/main/res/layout/fragment_circle_dial.xml
@@ -4,6 +4,13 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <com.diallock.diallock.diallock.Activity.Layout.ViewPager.CustomViewPager
+        android:id="@+id/widget_view"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center"
+        android:background="@drawable/widget_circle_bg" />
+
     <com.diallock.diallock.diallock.Activity.Layout.CircleLayout
         android:id="@+id/circle_screen"
         android:layout_width="match_parent"
@@ -21,12 +28,5 @@
         android:text="플레이스토어에 등록된 이메일로 패스워드가 발송됩니다."
         android:textColor="#FFFFFF"
         android:visibility="invisible" />
-
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="com.diallock.diallock.diallock.Activity.Fragment.WidgetTimeFragment"
-        android:id="@+id/widget_fragment"
-        android:layout_gravity="center" />
 
 </FrameLayout>
