--- a/app/src/main/res/layout/fragment_time_widget.xml
+++ b/app/src/main/res/layout/fragment_time_widget.xml
@@ -12,5 +12,6 @@
     <AnalogClock
         android:id="@+id/analogClock"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
 </LinearLayout>
