--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:background="@null"
     tools:context="com.diallock.diallock.diallock.Activity.Fragment.ImageFragment"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/image_layout">
 
     <!-- TODO: Update blank fragment layout -->
 
     <ImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:background="@drawable/widget_circle_bg"
         android:id="@+id/slideImage"
-        android:src="@drawable/dialcenter"
-        android:padding="20dp" />
+        android:src="@drawable/dialcenter" />
 </LinearLayout>
