--- a/app/src/main/res/drawable/widget_circle_bg.xml
+++ b/app/src/main/res/drawable/widget_circle_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/transparent"></solid>
-    <size
-        android:width="40dp"
-        android:height="40dp" />
+    <gradient
+        android:angle="270"
+        android:endColor="#FFFFFF"
+        android:startColor="#FFFFFF" />
 </shape>
