--- a/app/src/main/res/layout/fragment_circle_dial.xml
+++ b/app/src/main/res/layout/fragment_circle_dial.xml
@@ -4,10 +4,14 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <com.diallock.diallock.diallock.Activity.Layout.ViewPager.CustomViewPager
+    <com.diallock.diallock.diallock.Activity.Layout.CircleLayoutBg
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.diallock.diallock.diallock.Activity.Layout.ViewPager.HorizontalViewPager
         android:id="@+id/widget_view"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:layout_gravity="center"
         android:background="@drawable/widget_circle_bg" />
 
