--- a/app/src/main/res/layout/fragment_time_widget_analog.xml
+++ b/app/src/main/res/layout/fragment_time_widget_analog.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@null"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Activity.Fragment.WidgetTimeFragment"
-    android:background="@null">
+    tools:context=".Activity.Fragment.WidgetTimeAnalogFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -14,4 +14,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center" />
+
 </LinearLayout>
